# software_wgm_v2_cpp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  UsersDataBase.db  index.html  mainApp.cpp  wfg_system_modelling.simp  wfg_system_modelling.simp.bak
Debug/wgm_v2.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  wgm_v2.lastbuildstate
dependencies/: README.md
docs/: Doxyfile  wfg_system_modelling.simp  wfg_system_modelling.simp.bak
docs/html/: annotated.html  classcnt__alignment__system_1_1_icnt__aligning__controller-members.html  classcnt__alignment__system_1_1_icnt__aligning__controller.html  classcnt__alignment__system_1_1_icnt__dispensing-members.html  classcnt__alignment__system_1_1_icnt__dispensing.html  classcnt__alignment__system_1_1_icnt__motion-members.html  classcnt__alignment__system_1_1_icnt__motion.html  classcnt__alignment__system_1_1_ihv__controller-members.html  classcnt__alignment__system_1_1_ihv__controller.html  classcnt__alignment__system_1_1cnt__aligning__controller-members.html  classcnt__alignment__system_1_1cnt__aligning__controller.html  classcnt__alignment__system_1_1cnt__dispensing-members.html  classcnt__alignment__system_1_1cnt__dispensing.html  classcnt__alignment__system_1_1cnt__motion-members.html  classcnt__alignment__system_1_1cnt__motion.html  classcnt__alignment__system_1_1hv__controller-members.html  classcnt__alignment__system_1_1hv__controller.html  classes.html  classsulfur__heating__system_1_1_heater-members.html  classsulfur__heating__system_1_1_heater.html  classsulfur__heating__system_1_1_iheater-members.html  classsulfur__heating__system_1_1_iheater.html  classsulfur__heating__system_1_1_isulfur__heating__controller-members.html  classsulfur__heating__system_1_1_isulfur__heating__controller.html  classsulfur__heating__system_1_1_itemperature__sensor-members.html  classsulfur__heating__system_1_1_itemperature__sensor.html  classsulfur__heating__system_1_1sulfur__heating__controller-members.html  classsulfur__heating__system_1_1sulfur__heating__controller.html  classsulfur__heating__system_1_1temperature__sensor-members.html  classsulfur__heating__system_1_1temperature__sensor.html  classwafer__cooling__system_1_1_icooling__controller-members.html  classwafer__cooling__system_1_1_icooling__controller.html  classwafer__cooling__system_1_1_icooling__motion-members.html  classwafer__cooling__system_1_1_icooling__motion.html  classwafer__cooling__system_1_1_icooling__rotation-members.html  classwafer__cooling__system_1_1_icooling__rotation.html  classwafer__cooling__system_1_1_icooling__spitting-members.html  classwafer__cooling__system_1_1_icooling__spitting.html  classwafer__cooling__system_1_1cooling__controller-members.html  classwafer__cooling__system_1_1cooling__controller.html  (+123 more)
docs/latex/: annotated.tex  classcnt__alignment__system_1_1_icnt__aligning__controller.eps  (+147 more)
includes/: cnt_alignment_system.h  feedback_management.h  heating_system.h  process_feedback.h  process_manager.h  redirect_io.h  system_feedback.h  wafer_cooling_system.h  wafer_holder_motion_system.h  wgm_communication.h  wgm_experiment.h  wgm_monitoring.h  wgm_test.h  wgm_user.h
includes/systems/: heating_system.h  (+3 more)
pages/: Heater_6fffe36a5aa84de494b31f4e586b98e3.html  Ialigning_process_0fc3d9825d424a02ace6d69934284917.html  Icnt_aligning_controller_0dd21af0c383415b8402d84a080538e7.html  Icnt_dispensing_998c45604baf419aa23d3cc1a2da557d.html  Icnt_motion_53c6c301c6ec4e58a0b6a4630ce8d12e.html  Icooling_controller_4c59954cdd364dc3ac502f6ae6d0766e.html  Icooling_motion_a27cb3cbeaf34b958576c1789ec3f423.html  Icooling_process_c78e73f5769d4d0ba4a3dddfbecc2961.html  Icooling_rotation_6117d83629fc4d188ab59caa9c44b0ac.html  Icooling_spitting_6205e9f47fdf4c6ea68243a48e1b2df5.html  Icurrent_monitor_f5b9f5ec71bd4d588211a8ff73e6f7e3.html  Idelta_motion_1e6360a228b24d8db14f23f9798855be.html  Idistance_monitor_8bd176b69eef48cfb8e9386564f97a4d.html  Idistance_sensor_dd5d860770614046a8197790ce59ce39.html  Iextracting_process_b93d8062981746159543b4ed4ae977b5.html  Iheat_monitor_4d2684d67ea64633ae9a5c906233d0c3.html  Iheater_1146aa17bad24914bb289c6d361107f5.html  Iheating_process_5055bac5f1314b578cea03bfdae58312.html  Ihv_controller_e56333afcd6b4dacac771723188845ea.html  Iio_manager_8c6bb12fec124d568db842310da77140.html  Imonitor_managment_2f01da3609ac4333885471ea4ab357c8.html  Iprocesses_managment_43d16d5577e8499ea669817631adb1fc.html  Isinking_process_250f7d8297ef45e18d2c94e13f35b853.html  Isulfur_heating_controller_d06f70b1a695454189c1a7124ec2fe08.html  Itemperature_sensor_ed0d1e82a516417cba461be3692e8b86.html  Itime_monitor_71ae21dec3494733a0ebcc92c4d72273.html  Iui_manager_b21305205af042ddbeacd9549f2fa479.html  Ivoltage_monitor_940b4d26c7ce48c585cafe18f3aac343.html  Iwafer_motion_controller_f7f7bef0d66b40ea860f9dae01ea277e.html  Specification_perspective_p7a21a00cb8874ef5852b8ee89a2816f2_856125626.html  _008aead0a5294b1da6097596badf3a8a.html  _041717bd482041d79e3d10224975b963.html  _0590cb91ab74417f82033bed979f6453.html  _16a814b71b1b4ae5b87cdd3b32b179e4.html  _17a42f3b7656457daed89058b85e5a7b.html  _1ce74a854c1a4aabb75c0a8af6446a04.html  _2115e9b2d0504c9f9fe90217472fc9f0.html  _29fad504c16f42e9b1d878bfd4239565.html  _2d0fbd3390be475aa1cb10348f45e6b8.html  _358da7145364422a85ee7f8c063f6036.html  (+131 more)
src/: cnt_alignment_system.cpp  cnt_alignment_system.h  feedback_management.cpp  heating_system.cpp  main.cpp  mainApp.cpp  process_manager.cpp  wafer_cooling_system.cpp  wafer_holder_motion_system.cpp  wgm_communication.cpp  wgm_experiment.cpp  wgm_monitoring.cpp  wgm_test.cpp  wgm_user.cpp
test/: CMakeLists.txt  test.py
tests/: CMakeLists.txt  README.md  main.cpp  processTest.h
visual_studio/: wgm_v2.sln  wgm_v2.vcxproj  wgm_v2.vcxproj.filters
wfg_system_modelling/: wfg_system_modelling.simp  wfg_system_modelling.simp.bak
wfg_v2/: cnt_alignment_system.h  fake_hardware.h  feedback_management.cpp  feedback_management.h  heating_system.h  process_manager.cpp  process_manager.h  wafer_cooling_system.h  wafer_holder_motion_system.h  wgm_monitoring.h  wgm_test.h
(+44 files in other folders)
